# ira-android-solutions

./: .dockerignore  .env.dev  .env.example  .gitignore  DOCKER.md  IMPROVEMENT_PLAN.md  MANUAL_TEST_GUIDE.md  Makefile  PROJECT_MANAGEMENT_SYSTEM.md  QUICK_CUSTOMIZATION.md  README.md  TEMPLATE_READY.md  TEST_AUTHENTICATION.md  VERIFICATION_RESULTS.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  init-project.sh  push_to_github.sh  quick_test.sh  simple-backend.js  test_auth.sh
.github/workflows/: ci.yml  deploy.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  quick_seed.py  requirements.txt  test_password.py  test_runner.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema_with_2fa.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  auth.py  health.py  oauth.py  two_factor.py  users.py
backend/app/core/: __init__.py  config.py  database.py  logging.py  security.py  seed_data.py
backend/app/dependencies/: __init__.py  auth.py
backend/app/middleware/: rate_limiter.py
backend/app/models/: __init__.py  audit.py  auth.py  session.py  user.py
backend/app/schemas/: __init__.py  auth.py  user.py
backend/app/services/: __init__.py  auth_service.py  email_service.py  oauth_service.py  two_factor_service.py
backend/app/templates/email/: account_locked.html  base.html  password_changed.html  password_reset.html  verification.html
backend/prisma/: schema-project-management.prisma
backend/requirements/: base.txt  dev.txt  prod.txt
backend/src/routes/: projects.ts
backend/tests/: __init__.py  test_auth_endpoints.py  test_rate_limiter.py  test_security.py
database/init/: 01-init.sql
docs/: api-reference.md  configuration.md  security.md
docs/setup/: PROGRESS.md  STEP_4_COMPLETE.md
env-templates/: api-service.env  enterprise-internal.env  saas-startup.env
frontend/: .eslintrc.json  .prettierrc  Dockerfile  jest.config.js  jest.setup.js  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
frontend/src/: middleware.ts
frontend/src/__tests__/: auth-context.test.tsx
frontend/src/__tests__/components/: login-form.test.tsx
frontend/src/app/: animations.css  globals.css  layout.tsx  page.tsx
frontend/src/app/about/: page.tsx
frontend/src/app/admin/: layout.tsx  page.tsx
frontend/src/app/blog/: page.tsx
frontend/src/app/contact/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/portfolio/: page.tsx
frontend/src/app/profile/: page.tsx
frontend/src/app/services/: page.tsx
frontend/src/components/: icons.tsx
frontend/src/components/admin/: admin-dashboard.tsx  admin-layout.tsx
frontend/src/components/animations/: animated-components.tsx  animated-hero-title.tsx  page-animations.tsx  (+1 more)
frontend/src/contexts/: auth-context.tsx
frontend/src/hooks/: use-auth-form.ts  use-password-strength.ts
frontend/src/lib/: admin-api.ts  animations.ts  api-client.ts  auth-api.ts  cookie-manager.ts  translations.ts  utils.ts
frontend/src/types/: admin.types.ts  api.types.ts  auth.types.ts  index.ts
nginx/: default.conf  nginx.conf
scripts/: docker-dev.sh
(+39 files in other folders)
